GNOME Bugzilla – Bug 770714
QuickAddPopover: "Add" button looses focus after changing calendar
Last modified: 2017-04-17 18:20:40 UTC
To reproduce: -> press on a date, type "event test" in the QuickAddPopover -> Use the select_calendar_button to change the calendar to a different one. -> press the back_button to get back -> press Enter Because select_calendar_button has focus, pressing enter in this case does not activate add_button but activates select_calendar_button. I think it would be more convenient if the add_button was activated in this case.
Created attachment 336740 [details] [review] quick-add-popover: focus "Create" button after selecting an agenda So that the keyboard flow is smooth and clean.
Indeed, thanks for the report! Attachment 336740 [details] pushed as e8dbe48 - quick-add-popover: focus "Create" button after selecting an agenda