quick-add-popover: focus "Create" button after selecting an agenda

So that the keyboard flow is smooth and clean.

https://bugzilla.gnome.org/show_bug.cgi?id=770714